[gd_scene load_steps=4 format=3 uid="uid://byrp17dpf0yw"]

[ext_resource type="Script" path="res://mob.gd" id="1_bk1kh"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0dsu1"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vbn2f"]

[node name="Mob" type="CharacterBody2D"]
script = ExtResource("1_bk1kh")

[node name="MobArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MobArea"]
shape = SubResource("CapsuleShape2D_0dsu1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_vbn2f")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 1.2
one_shot = true

[node name="InitiateAttackTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="NavigationObstacle2D" type="NavigationObstacle2D" parent="."]

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="InitiateAttackTimer" to="." method="_on_initiate_attack_timer_timeout"]
